Fix loader button sizes on iphoneX

--- a/src/Components/Contact/_contact.scss
+++ b/src/Components/Contact/_contact.scss
@@ -44,8 +44,8 @@
 			user-select: none;
 			transform-style: preserve-3d;
 			@media #{$mq-375} {
-				height: 50px;
-				width: 160px;
+				height: 55px;
+				width: 150px;
 				margin-left: 15px;
 				margin-right: 15px;
 				margin-bottom: 10px;
